# doc-analyst

./: .gitignore  Makefile  TODO.md  docker-compose.yml  package.json  pnpm-lock.yaml  pyproject.toml  readme.md
apps/api/: Dockerfile  pyproject.toml
apps/api/app/: config.py  logging_config.py  main.py
apps/api/app/api/: routes_agents.py  routes_chat.py  routes_upload.py
apps/api/app/middleware/: request_context.py
apps/api/app/services/: checkpoint.py  file_service.py  graph_service.py  langfuse_service.py  parse_service.py  vector_service.py
apps/web/: package.json  pnpm-lock.yaml
apps/web/app/: layout.tsx  page.tsx
apps/web/app/api/agents/: route.ts
apps/web/app/api/chat/: route.ts
apps/web/app/api/files/[id]/: route.ts
apps/web/app/api/upload/: route.ts
apps/web/components/chat/: chat-container.tsx  chat-input.tsx  empty-state.tsx  message-bubble.tsx  tool-trace.tsx
apps/web/components/sidebar/: agent-activity.tsx  file-dropzone.tsx  file-list.tsx  settings-modal.tsx  sidebar.tsx
apps/web/hooks/: use-agent-activity.ts  use-session.ts
apps/web/lib/: logger.ts
docs/: backend.prd.md  frontend.prd.md  project.prd.md
