[project]
name = "doc-analyst"
version = "0.1.0"
description = "Multi-agent document analyst with LangGraph supervisor and streaming"
requires-python = ">=3.11"

[tool.uv.workspace]
members = ["packages/*", "apps/api"]

[tool.ruff]
line-length = 100
target-version = "py311"

[tool.ruff.lint]
select = ["E", "F", "I", "W"]

[tool.pytest.ini_options]
asyncio_mode = "auto"
testpaths = ["apps/api", "packages"]
